# SinkedSea

./: .gitignore  CMakeLists.txt  FindAntlr4.cmake  README.md  SinkedSea.g4  antlr.cpp  ast.cpp  ast.hpp  channel.cpp  channel.hpp  demo.sh  demo_output.txt  lexer.hpp  main.cpp
antlr4-runtime/: SinkedSea.interp  SinkedSeaBaseListener.cpp  SinkedSeaBaseListener.h  SinkedSeaBaseVisitor.cpp  SinkedSeaBaseVisitor.h  SinkedSeaLexer.cpp  SinkedSeaLexer.h  SinkedSeaLexer.interp  SinkedSeaLexer.tokens  SinkedSeaListener.cpp  SinkedSeaListener.h  SinkedSeaParser.cpp  SinkedSeaParser.h  SinkedSeaVisitor.cpp  SinkedSeaVisitor.h
examples/: atomic_increment.ss  channels.ss  factorial.ss  gcd.ss  race_conditions.ss  syntax_errors.ss
tests/: bad_test2.ss  test1.ss
